--- a/index.html
+++ b/index.html
@@ -5,19 +5,410 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LIMITLESS</title>
+    <!-- Slick slider CSS file -->
     <link
       rel="stylesheet"
       type="text/css"
       href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"
     />
+    <!-- Custom stylesheet -->
     <link href="css/styles.css" type="text/css" rel="Stylesheet" />
-
+    <!-- Jquery library-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/95dc93da07.js"></script>
+    <!-- Slick slider plugin javascript -->
     <script
       type="text/javascript"
       src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"
     ></script>
   </head>
-  <body></body>
+  <body>
+    <div id="header-hero-container">
+      <header>
+        <div class="flex container">
+          <a href="#" id="logo">LIMITLESS</a>
+          <nav>
+            <button id="nav-toggle" class="hamburger-menu">
+              <span class="strip"></span>
+              <span class="strip"></span>
+              <span class="strip"></span>
+            </button>
+
+            <ul id="nav-menu">
+              <li><a href="#" class="active">Home</a></li>
+              <li><a href="#">Properties</a></li>
+              <li><a href="#">Agents</a></li>
+              <li><a href="#">About</a></li>
+              <li><a href="#">News</a></li>
+              <li><a href="#">Contact</a></li>
+            </ul>
+          </nav>
+        </div>
+      </header>
+
+      <section id="hero">
+        <div class="fade"></div>
+        <div class="hero-text">
+          <h1>Buy and sell real estate properties</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia
+            voluptates vero consectetur aliquam ex provident commodi mollitia.
+          </p>
+        </div>
+      </section>
+    </div>
+
+    <section id="how-it-works">
+      <div class="container">
+        <h2>How It Works</h2>
+        <div class="flex">
+          <div>
+            <span class="fas fa-home"></span>
+            <h4>Find a Property</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+          </div>
+
+          <div>
+            <span class="fas fa-dollar-sign"></span>
+            <h4>Buy a Property</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+          </div>
+
+          <div>
+            <span class="fas fa-chart-line"></span>
+            <h4>Investing</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section id="properties">
+      <div class="container">
+        <h2>Properties</h2>
+        <div id="properties-slider" class="slick">
+          <div>
+            <img
+              src="https://images.pexels.com/photos/106399/pexels-photo-106399.jpeg?auto=compress&cs=tinysrgb&w=400"
+              alt="property 1"
+            />
+            <div class="property-details">
+              <p class="price">$3,400,000</p>
+              <span class="beds">6 beds</span>
+              <span class="baths">4 baths</span>
+              <span class="sqft">5,300 sqft.</span>
+              <address>540 Center Street SE, Calgary, AB</address>
+            </div>
+          </div>
+
+          <div>
+            <img
+              src="https://images.pexels.com/photos/323780/pexels-photo-323780.jpeg?auto=compress&cs=tinysrgb&w=400"
+              alt="property 2"
+            />
+            <div class="property-details">
+              <p class="price">$3,400,000</p>
+              <span class="beds">6 beds</span>
+              <span class="baths">4 baths</span>
+              <span class="sqft">5,300 sqft.</span>
+              <address>540 Center Street SE, Calgary, AB</address>
+            </div>
+          </div>
+
+          <div>
+            <img
+              src="https://images.pexels.com/photos/1396122/pexels-photo-1396122.jpeg?auto=compress&cs=tinysrgb&w=400"
+              alt="property 3"
+            />
+            <div class="property-details">
+              <p class="price">$3,400,000</p>
+              <span class="beds">6 beds</span>
+              <span class="baths">4 baths</span>
+              <span class="sqft">5,300 sqft.</span>
+              <address>540 Center Street SE, Calgary, AB</address>
+            </div>
+          </div>
+
+          <div>
+            <img
+              src="https://images.pexels.com/photos/2102587/pexels-photo-2102587.jpeg?auto=compress&cs=tinysrgb&w=400"
+              alt="property 4"
+            />
+            <div class="property-details">
+              <p class="price">$3,400,000</p>
+              <span class="beds">6 beds</span>
+              <span class="baths">4 baths</span>
+              <span class="sqft">5,300 sqft.</span>
+              <address>540 Center Street SE, Calgary, AB</address>
+            </div>
+          </div>
+
+          <div>
+            <img
+              src="https://images.pexels.com/photos/1115804/pexels-photo-1115804.jpeg?auto=compress&cs=tinysrgb&w=400"
+              alt="property 5"
+            />
+            <div class="property-details">
+              <p class="price">$3,400,000</p>
+              <span class="beds">6 beds</span>
+              <span class="baths">4 baths</span>
+              <span class="sqft">5,300 sqft.</span>
+              <address>540 Center Street SE, Calgary, AB</address>
+            </div>
+          </div>
+        </div>
+
+        <button class="rounded">View All Property Listings</button>
+      </div>
+    </section>
+
+    <section id="agents">
+      <div class="container">
+        <h2>Agents</h2>
+        <p class="large-paragraph">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad ab atque
+          ea voluptates.
+        </p>
+
+        <div class="flex">
+          <div class="card">
+            <img
+              src="https://images.pexels.com/photos/2381069/pexels-photo-2381069.jpeg?auto=compress&cs=tinysrgb&w=400"
+              alt="Realtor 1"
+            />
+            <h3>Kaiara Spencer</h3>
+            <p>Real Estate Agent</p>
+          </div>
+
+          <div class="card">
+            <img
+              src="https://images.pexels.com/photos/997512/pexels-photo-997512.jpeg?auto=compress&cs=tinysrgb&w=400"
+              alt="Realtor 2"
+            />
+            <h3>Dave Simpson</h3>
+            <p>Real Estate Agent</p>
+          </div>
+
+          <div class="card">
+            <img
+              src="https://images.pexels.com/photos/5648103/pexels-photo-5648103.jpeg?auto=compress&cs=tinysrgb&w=400"
+              alt="Realtor 3"
+            />
+            <h3>Ben Thompson</h3>
+            <p>Real Estate Agent</p>
+          </div>
+
+          <div class="card">
+            <img
+              src="https://images.pexels.com/photos/7582899/pexels-photo-7582899.jpeg?auto=compress&cs=tinysrgb&w=400"
+              alt="Realtor 4"
+            />
+            <h3>Kyla Stewart</h3>
+            <p>Real Estate Agent</p>
+          </div>
+
+          <div class="card">
+            <img
+              src="https://images.pexels.com/photos/8937551/pexels-photo-8937551.jpeg?auto=compress&cs=tinysrgb&w=400"
+              alt="Realtor 5"
+            />
+            <h3>Rich Moffatt</h3>
+            <p>Real Estate Agent</p>
+          </div>
+
+          <div class="card">
+            <img
+              src="https://images.pexels.com/photos/6325964/pexels-photo-6325964.jpeg?auto=compress&cs=tinysrgb&w=400"
+              alt="Realtor 6"
+            />
+            <h3>Stuart Redman</h3>
+            <p>Real Estate Agent</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="the-best">
+      <div class="flex container">
+        <img
+          src="https://images.pexels.com/photos/323780/pexels-photo-323780.jpeg?auto=compress&cs=tinysrgb&w=400"
+          alt="property 1"
+        />
+        <div>
+          <h2>We Are the Best Real Estate Company</h2>
+          <p class="large-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet animi pariatur perferendis aut reiciendis culpa harum magnam eligendi, consectetur hic consequuntur!</p>
+          <ul>
+            <li>Lorem ipsum dolor sit amet.</li>
+            <li>Lorem ipsum dolor sit amet.</li>
+            <li>Lorem ipsum dolor sit amet.</li>
+            <li>Lorem ipsum dolor sit amet.</li>
+            <li>Lorem ipsum dolor sit amet.</li>
+          </ul>
+          <button class="rounded">Learn More</button>
+        </div>
+      </div>
+    </section>
+
+    <section id="services">
+      <div class="container">
+        <h2>Services</h2>
+        <div class="flex">
+          <div>
+            <div class="fas fa-home"></div>
+            <div class="services-card-right">
+              <h3>Search Property</h3>
+              <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa vitae suscipit provident facere, nulla cumque doloribus.</P>
+              <a href="#">Learn More</a>
+            </div>
+          <div>
+            <div class="fas fa-dollar-sign"></div>
+            <div class="services-card-right">
+              <h3>Buy Property</h3>
+              <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa vitae suscipit provident facere, nulla cumque doloribus.</P>
+              <a href="#">Learn More</a>
+            </div>
+          <div>
+            <div class="fas fa-chart-line"></div>
+            <div class="services-card-right">
+              <h3>Investing</h3>
+              <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa vitae suscipit provident facere, nulla cumque doloribus.</P>
+              <a href="#">Learn More</a>
+            </div>
+          <div>
+            <div class="fas fa-building"></div>
+            <div class="services-card-right">
+              <h3>List a Property</h3>
+              <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa vitae suscipit provident facere, nulla cumque doloribus.</P>
+              <a href="#">Learn More</a>
+            </div>
+          <div>
+            <div class="fas fa-search"></div>
+            <div class="services-card-right">
+              <h3>Property Locator</h3>
+              <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa vitae suscipit provident facere, nulla cumque doloribus.</P>
+              <a href="#">Learn More</a>
+            </div>
+          <div>
+            <div class="fas fa-mobile-alt"></div>
+            <div class="services-card-right">
+              <h3>Limitless Apps</h3>
+              <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa vitae suscipit provident facere, nulla cumque doloribus.</P>
+              <a href="#">Learn More</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="testimonials">
+      <div class="container">
+        <h2>What Our Clients Are Saying</h2>
+        <div class="testimonial-slider">
+          <div>
+            <blockquote>
+              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores illo dolor dolorum architecto nemo, eligendi impedit nulla harum in, modi ducimus laboriosam debitis molestiae nihil quam iusto consequatur aut ex exercitationem quis laudantium voluptatem reprehenderit!</p>
+            </blockquote>
+            <div class="testimonial-caption">
+              <img src="https://images.pexels.com/photos/8101728/pexels-photo-8101728.jpeg?auto=compress&cs=tinysrgb&w=400" alt="Client 1">
+              <p>Nick Andros</p>
+            </div>
+          <div>
+            <blockquote>
+              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores illo dolor dolorum architecto nemo, eligendi impedit nulla harum in, modi ducimus laboriosam debitis molestiae nihil quam iusto consequatur aut ex exercitationem quis laudantium voluptatem reprehenderit!</p>
+            </blockquote>
+            <div class="testimonial-caption">
+              <img src="https://images.pexels.com/photos/3400574/pexels-photo-3400574.jpeg?auto=compress&cs=tinysrgb&w=400" alt="Client 2">
+              <p>Larry Underwood</p>
+            </div>
+          <div>
+            <blockquote>
+              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores illo dolor dolorum architecto nemo, eligendi impedit nulla harum in, modi ducimus laboriosam debitis molestiae nihil quam iusto consequatur aut ex exercitationem quis laudantium voluptatem reprehenderit!</p>
+            </blockquote>
+            <div class="testimonial-caption">
+              <img src="https://images.pexels.com/photos/5060990/pexels-photo-5060990.jpeg?auto=compress&cs=tinysrgb&w=400" alt="Client 3">
+              <p>Fran Goldsmith</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="contact">
+      <div class="container">
+        <h2>Contact Us</h2>
+
+        <div class="flex">
+          <div id="form-container">
+            <h3>Contact Form</h3>
+            <form>
+              <label for="name">Name</label>
+              <input type="text" id="name">
+
+              <label for="email">Email</label>
+              <input type="text" id="email">
+
+              <label for="subject">Subject</label>
+              <input type="text" id="subject">
+
+              <label for="message">Message</label>
+              <textarea id="message">Write your message here...</textarea>
+
+              <button class="rounded">Send Message</button>
+            </form>
+          </div>
+
+          <div id="address-container">
+            <label>Address</label>
+            <address>
+              2006 Evergreen Drive NW, Calgary, AB
+            </address>
+
+            <label>Phone</label>
+            <a href="#">123-456-7890</a>
+
+            <label> Email Address</label>
+            <a href="#">ouremail@gmail.com</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <footer>
+      <div class="flex container">
+        <div class="footer-about">
+          <h5>About Limitless</h5>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi et blanditiis optio aliquid facilis quae aspernatur velit quaerat ratione tempora.</p>
+        </div>
+
+        <div class="footer-quick-links">
+          <h5>Quick Links</h5>
+          <ul>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Services</a></li>
+            <li><a href="#">Testimonials</a></li>
+            <li><a href="#">contact Us</a></li>
+          </ul>
+        </div>
+
+        <div class="footer-subcribe">
+          <h5>subcribe to our Newsletter</h5>
+          <div id="subscribe-container">
+            <input type="text" placeholder="Enter Email">
+            <button class="right-rounded">Send</button>
+          </div>
+
+          <h5 class="follow-us">Follow Us</h5>
+          <ul>
+            <li><a href="#"><span class="fab fa-facebook-f"></span></a></li>
+            <li><a href="#"><span class="fab fa-twitter"></span></a></li>
+            <li><a href="#"><span class="fab fa-instagram"></span></a></li>
+            <li><a href="#"><span class="fab fa-linkedin-in"></span></a></li>
+          </ul>
+        </div>
+      </div>
+
+      <small>Copyright &copy; 2023 All rights reserved | This template is made with <span class="fa fa-heart"></span> by <a href="https://colorlib.com/">Colorlib</a></small>
+    </footer>
+  </body>
 </html>
