--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"
     />
     <!-- Custom stylesheet -->
-    <link href="css/styles.css" type="text/css" rel="Stylesheet" />
+    <link href="styles.css" type="text/css" rel="Stylesheet" />
     <!-- Jquery library-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <!-- Font Awesome -->
