add remaining desktop only styles

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
         <div class="flex">
           <div class="card">
             <img
-              src="https://images.pexels.com/photos/2381069/pexels-photo-2381069.jpeg?auto=compress&cs=tinysrgb&w=400"
+              src="https://images.pexels.com/photos/3894387/pexels-photo-3894387.jpeg?auto=compress&cs=tinysrgb&w=400"
               alt="Realtor 1"
             />
             <h3>Kaiara Spencer</h3>
@@ -261,6 +261,7 @@
               <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa vitae suscipit provident facere, nulla cumque doloribus.</P>
               <a href="#">Learn More</a>
             </div>
+          </div>
           <div>
             <div class="fas fa-dollar-sign"></div>
             <div class="services-card-right">
@@ -268,6 +269,7 @@
               <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa vitae suscipit provident facere, nulla cumque doloribus.</P>
               <a href="#">Learn More</a>
             </div>
+          </div>
           <div>
             <div class="fas fa-chart-line"></div>
             <div class="services-card-right">
@@ -275,6 +277,7 @@
               <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa vitae suscipit provident facere, nulla cumque doloribus.</P>
               <a href="#">Learn More</a>
             </div>
+          </div>
           <div>
             <div class="fas fa-building"></div>
             <div class="services-card-right">
@@ -282,6 +285,7 @@
               <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa vitae suscipit provident facere, nulla cumque doloribus.</P>
               <a href="#">Learn More</a>
             </div>
+          </div>
           <div>
             <div class="fas fa-search"></div>
             <div class="services-card-right">
@@ -289,6 +293,7 @@
               <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa vitae suscipit provident facere, nulla cumque doloribus.</P>
               <a href="#">Learn More</a>
             </div>
+          </div>
           <div>
             <div class="fas fa-mobile-alt"></div>
             <div class="services-card-right">
@@ -304,7 +309,7 @@
     <section id="testimonials">
       <div class="container">
         <h2>What Our Clients Are Saying</h2>
-        <div class="testimonial-slider">
+        <div id="testimonials-slider">
           <div>
             <blockquote>
               <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores illo dolor dolorum architecto nemo, eligendi impedit nulla harum in, modi ducimus laboriosam debitis molestiae nihil quam iusto consequatur aut ex exercitationem quis laudantium voluptatem reprehenderit!</p>
@@ -391,8 +396,8 @@
           </ul>
         </div>
 
-        <div class="footer-subcribe">
-          <h5>subcribe to our Newsletter</h5>
+        <div class="footer-subscribe">
+          <h5>Subcribe to our Newsletter</h5>
           <div id="subscribe-container">
             <input type="text" placeholder="Enter Email">
             <button class="right-rounded">Send</button>
