add interactivity to webpage

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
               <li><a href="#">About</a></li>
               <li><a href="#">News</a></li>
               <li><a href="#">Contact</a></li>
+              <li id="close-flyout"><span class="fas fa-times"></span></li>
             </ul>
           </nav>
         </div>
@@ -236,8 +237,14 @@
         />
         <div>
           <h2>We Are the Best Real Estate Company</h2>
-          <p class="large-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet animi pariatur perferendis aut reiciendis culpa harum magnam eligendi, consectetur hic consequuntur!</p>
+          <p class="large-paragraph">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet animi
+            pariatur perferendis aut reiciendis culpa harum magnam eligendi,
+            consectetur hic consequuntur!
+          </p>
           <ul>
             <li>Lorem ipsum dolor sit amet.</li>
             <li>Lorem ipsum dolor sit amet.</li>
@@ -258,7 +265,10 @@
             <div class="fas fa-home"></div>
             <div class="services-card-right">
               <h3>Search Property</h3>
-              <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa vitae suscipit provident facere, nulla cumque doloribus.</P>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa
+                vitae suscipit provident facere, nulla cumque doloribus.
+              </p>
               <a href="#">Learn More</a>
             </div>
           </div>
@@ -266,7 +276,10 @@
             <div class="fas fa-dollar-sign"></div>
             <div class="services-card-right">
               <h3>Buy Property</h3>
-              <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa vitae suscipit provident facere, nulla cumque doloribus.</P>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa
+                vitae suscipit provident facere, nulla cumque doloribus.
+              </p>
               <a href="#">Learn More</a>
             </div>
           </div>
@@ -274,7 +287,10 @@
             <div class="fas fa-chart-line"></div>
             <div class="services-card-right">
               <h3>Investing</h3>
-              <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa vitae suscipit provident facere, nulla cumque doloribus.</P>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa
+                vitae suscipit provident facere, nulla cumque doloribus.
+              </p>
               <a href="#">Learn More</a>
             </div>
           </div>
@@ -282,7 +298,10 @@
             <div class="fas fa-building"></div>
             <div class="services-card-right">
               <h3>List a Property</h3>
-              <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa vitae suscipit provident facere, nulla cumque doloribus.</P>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa
+                vitae suscipit provident facere, nulla cumque doloribus.
+              </p>
               <a href="#">Learn More</a>
             </div>
           </div>
@@ -290,7 +309,10 @@
             <div class="fas fa-search"></div>
             <div class="services-card-right">
               <h3>Property Locator</h3>
-              <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa vitae suscipit provident facere, nulla cumque doloribus.</P>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa
+                vitae suscipit provident facere, nulla cumque doloribus.
+              </p>
               <a href="#">Learn More</a>
             </div>
           </div>
@@ -298,7 +320,10 @@
             <div class="fas fa-mobile-alt"></div>
             <div class="services-card-right">
               <h3>Limitless Apps</h3>
-              <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa vitae suscipit provident facere, nulla cumque doloribus.</P>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa
+                vitae suscipit provident facere, nulla cumque doloribus.
+              </p>
               <a href="#">Learn More</a>
             </div>
           </div>
@@ -312,26 +337,55 @@
         <div id="testimonials-slider">
           <div>
             <blockquote>
-              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores illo dolor dolorum architecto nemo, eligendi impedit nulla harum in, modi ducimus laboriosam debitis molestiae nihil quam iusto consequatur aut ex exercitationem quis laudantium voluptatem reprehenderit!</p>
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Maiores illo dolor dolorum architecto nemo, eligendi impedit
+                nulla harum in, modi ducimus laboriosam debitis molestiae nihil
+                quam iusto consequatur aut ex exercitationem quis laudantium
+                voluptatem reprehenderit!
+              </p>
             </blockquote>
             <div class="testimonial-caption">
-              <img src="https://images.pexels.com/photos/8101728/pexels-photo-8101728.jpeg?auto=compress&cs=tinysrgb&w=400" alt="Client 1">
+              <img
+                src="https://images.pexels.com/photos/8101728/pexels-photo-8101728.jpeg?auto=compress&cs=tinysrgb&w=400"
+                alt="Client 1"
+              />
               <p>Nick Andros</p>
             </div>
+          </div>
           <div>
             <blockquote>
-              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores illo dolor dolorum architecto nemo, eligendi impedit nulla harum in, modi ducimus laboriosam debitis molestiae nihil quam iusto consequatur aut ex exercitationem quis laudantium voluptatem reprehenderit!</p>
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Maiores illo dolor dolorum architecto nemo, eligendi impedit
+                nulla harum in, modi ducimus laboriosam debitis molestiae nihil
+                quam iusto consequatur aut ex exercitationem quis laudantium
+                voluptatem reprehenderit!
+              </p>
             </blockquote>
             <div class="testimonial-caption">
-              <img src="https://images.pexels.com/photos/3400574/pexels-photo-3400574.jpeg?auto=compress&cs=tinysrgb&w=400" alt="Client 2">
+              <img
+                src="https://images.pexels.com/photos/3400574/pexels-photo-3400574.jpeg?auto=compress&cs=tinysrgb&w=400"
+                alt="Client 2"
+              />
               <p>Larry Underwood</p>
             </div>
+          </div>
           <div>
             <blockquote>
-              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores illo dolor dolorum architecto nemo, eligendi impedit nulla harum in, modi ducimus laboriosam debitis molestiae nihil quam iusto consequatur aut ex exercitationem quis laudantium voluptatem reprehenderit!</p>
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Maiores illo dolor dolorum architecto nemo, eligendi impedit
+                nulla harum in, modi ducimus laboriosam debitis molestiae nihil
+                quam iusto consequatur aut ex exercitationem quis laudantium
+                voluptatem reprehenderit!
+              </p>
             </blockquote>
             <div class="testimonial-caption">
-              <img src="https://images.pexels.com/photos/5060990/pexels-photo-5060990.jpeg?auto=compress&cs=tinysrgb&w=400" alt="Client 3">
+              <img
+                src="https://images.pexels.com/photos/5060990/pexels-photo-5060990.jpeg?auto=compress&cs=tinysrgb&w=400"
+                alt="Client 3"
+              />
               <p>Fran Goldsmith</p>
             </div>
           </div>
@@ -348,13 +402,13 @@
             <h3>Contact Form</h3>
             <form>
               <label for="name">Name</label>
-              <input type="text" id="name">
+              <input type="text" id="name" />
 
               <label for="email">Email</label>
-              <input type="text" id="email">
+              <input type="text" id="email" />
 
               <label for="subject">Subject</label>
-              <input type="text" id="subject">
+              <input type="text" id="subject" />
 
               <label for="message">Message</label>
               <textarea id="message">Write your message here...</textarea>
@@ -365,9 +419,7 @@
 
           <div id="address-container">
             <label>Address</label>
-            <address>
-              2006 Evergreen Drive NW, Calgary, AB
-            </address>
+            <address>2006 Evergreen Drive NW, Calgary, AB</address>
 
             <label>Phone</label>
             <a href="#">123-456-7890</a>
@@ -383,7 +435,11 @@
       <div class="flex container">
         <div class="footer-about">
           <h5>About Limitless</h5>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi et blanditiis optio aliquid facilis quae aspernatur velit quaerat ratione tempora.</p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi et
+            blanditiis optio aliquid facilis quae aspernatur velit quaerat
+            ratione tempora.
+          </p>
         </div>
 
         <div class="footer-quick-links">
@@ -399,21 +455,34 @@
         <div class="footer-subscribe">
           <h5>Subcribe to our Newsletter</h5>
           <div id="subscribe-container">
-            <input type="text" placeholder="Enter Email">
+            <input type="text" placeholder="Enter Email" />
             <button class="right-rounded">Send</button>
           </div>
 
           <h5 class="follow-us">Follow Us</h5>
           <ul>
-            <li><a href="#"><span class="fab fa-facebook-f"></span></a></li>
-            <li><a href="#"><span class="fab fa-twitter"></span></a></li>
-            <li><a href="#"><span class="fab fa-instagram"></span></a></li>
-            <li><a href="#"><span class="fab fa-linkedin-in"></span></a></li>
+            <li>
+              <a href="#"><span class="fab fa-facebook-f"></span></a>
+            </li>
+            <li>
+              <a href="#"><span class="fab fa-twitter"></span></a>
+            </li>
+            <li>
+              <a href="#"><span class="fab fa-instagram"></span></a>
+            </li>
+            <li>
+              <a href="#"><span class="fab fa-linkedin-in"></span></a>
+            </li>
           </ul>
         </div>
       </div>
 
-      <small>Copyright &copy; 2023 All rights reserved | This template is made with <span class="fa fa-heart"></span> by <a href="https://colorlib.com/">Colorlib</a></small>
+      <small
+        >Copyright &copy; 2023 All rights reserved | This template is made with
+        <span class="fa fa-heart"></span> by
+        <a href="https://colorlib.com/">Colorlib</a></small
+      >
     </footer>
+    <script src="index.js"></script>
   </body>
 </html>
